[package]
name = "feroxide-gui"
version = "0.0.1"
authors = ["feroxide"]

description = "A basic chemistry simulator (GUI)"
documentation = "https://github.com/feroxide/feroxide-gui"
homepage = "https://feroxide.github.io/feroxide/"
repository = "https://github.com/feroxide/feroxide-gui"

readme = "README.md"

keywords = ["chemistry", "simulator", "mit"]
categories = ["gui", "science"]

license-file = "LICENSE"


[dependencies]
feroxide = "1.2.0"
gtk = "0.1.2"


[features]
default = ["gtk_3_18"]
gtk_3_10 = ["gtk/v3_10"]
gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
gtk_3_18 = ["gtk_3_16", "gtk/v3_18"]
